--- a/conference_schedule/pubspec.yaml
+++ b/conference_schedule/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   dartx: 1.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_bloc: 8.0.0
   font_awesome_flutter: 9.2.0
   get_it: 7.2.0
+  i69n: 2.1.0
   injectable: 1.5.0
   intl: 0.17.0
   json_annotation: 4.4.0
