--- a/conference_schedule/pubspec.yaml
+++ b/conference_schedule/pubspec.yaml
@@ -7,29 +7,30 @@ environment:
   sdk: '>=2.14.0 <3.0.0'
 
 dependencies:
-  auto_route: 3.1.3
-  cached_network_image: 3.2.0
-  dartx: 1.0.0
+  auto_route: ^4.2.0
+  cached_network_image: ^3.2.1
+  dartx: ^1.1.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_bloc: 8.0.0
-  font_awesome_flutter: 9.2.0
+  flutter_bloc: ^8.0.1
+  font_awesome_flutter: ^10.1.0
+  freezed_annotation: ^2.0.3
   get_it: 7.2.0
   i69n: 2.1.0
-  injectable: 1.5.0
+  injectable: ^1.5.3
   intl: 0.17.0
-  json_annotation: 4.4.0
-  url_launcher: 6.0.17
+  json_annotation: ^4.5.0
+  url_launcher: ^6.1.4
 
 dev_dependencies:
-  auto_route_generator: 3.1.0
-  build_runner: 2.1.5
-  flutter_lints: 1.0.4
-  freezed: 1.0.2
-  injectable_generator: 1.5.2
-  json_serializable: 6.1.1
+  auto_route_generator: ^4.2.0
+  build_runner: ^2.1.11
+  flutter_lints: ^2.0.1
+  freezed: ^2.0.3+1
+  injectable_generator: ^1.5.3
+  json_serializable: ^6.2.0
 
 flutter:
   uses-material-design: true
